hphp/hack/test/typecheck/fc_enum_5.php
<?hh

// Should fail because it doesn't match
enum Foo: int {
  FOO = "foo";
}
